test/style.css
:root {
    font-family: Inter, sans-serif;
    font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */
  }
  @supports (font-variation-settings: normal) {
    :root { font-family: InterVariable, sans-serif; }
  }

*{
    font-family: Inter;
}

body {
  background-color: #FFFFFF; /* Default background color */
}

.title{
    margin-top: auto;
    font-family: Inter;
    font-size: 32.5px;
}

.box {
    display: flex;
}

.item{
  margin-left: 70pt;
}

.right{
  margin-right: 65pt; align-items: flex-end; text-align: right;
}

.coolinput {
  display: flex;
  flex-direction: column;
  width: fit-content;
  position: static;
  max-width: 150px;
}

.coolinput label.text {
  font-size: 0.75rem;
  color: #000000;
  font-weight: 700;
  position: relative;
  top: 0.5rem;
  margin: 0 0 0 7px;
  padding: 0 3px;
  background: #ffffff;
  width: fit-content;
}

.coolinput input[type=text].input {
  padding: 11px 10px;
  font-size: 0.75rem;
  border: 1px #000000 solid;
  border-radius: 5px;
  background: #ffffff;
}

.coolinput input[type=text].input:focus {
  outline: none;
}

table.right {
  border-collapse: separate;
  border-spacing: 0;
  border-radius: 6pt;
  overflow: hidden;
}

table.right th:first-child,
table.right td:first-child {
  border-top-left-radius: 6pt;
  border-bottom-left-radius: 6pt;
}

table.right th:last-child,
table.right td:last-child {
  border-top-right-radius: 6pt;
  border-bottom-right-radius: 6pt;
}

